--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ button {
     text-align: center;
     padding: 188px 0;
     margin: 0 auto;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office-1.jpg");
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office1158px.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -809,3 +809,19 @@ button {
 .button-send-modal:focus {
     background-color: #404bbf;
 }
+
+@media (min-width: 320px) and (min-resolution: 2x) {
+    .hero {
+        max-width: 320px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../);
+
+    }
+}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 768px) and (min-resolution: 2x) {}
+
+@media (min-width: 1158px) {}
+
+@media (min-width: 1158px) and (min-resolution: 2x) {}
