--- a/css/styles.css
+++ b/css/styles.css
@@ -813,15 +813,254 @@ button {
 @media (min-width: 320px) and (min-resolution: 2x) {
     .hero {
         max-width: 320px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../);
-
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office@2x320px.jpg);
+        background-size: cover;
     }
 }
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .container {
+        min-width: 768px;
+    }
 
-@media (min-width: 768px) and (min-resolution: 2x) {}
+    .nav-list {
+        display: flex;
+    }
 
-@media (min-width: 1158px) {}
+    .contact-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
 
-@media (min-width: 1158px) and (min-resolution: 2x) {}
+    .burger-menu {
+        display: none;
+    }
+
+    .contact-link {
+        font-size: 12px;
+    }
+
+    .header-container {
+        padding: 0 16px;
+    }
+
+    .header-logo {
+        margin-right: 120px;
+    }
+
+    .hero-title {
+        font-size: 56px;
+        margin-bottom: 36px;
+    }
+
+    .hero {
+        max-width: 768px;
+        padding-top: 112px;
+        padding-bottom: 112px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office768px.jpg);
+    }
+
+    .advantages-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+
+    .advantages-item {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .advantages-subtitle {
+        text-align: left;
+    }
+
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        column-gap: 24px;
+        row-gap: 64px;
+    }
+
+    .team {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    .portfolio-list {
+        justify-content: center;
+        row-gap: 72px;
+    }
+
+    .footer-container {
+        width: 600px;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: start;
+    }
+
+    .footer-form {
+        flex-direction: row;
+        gap: 24px;
+    }
+
+    .footer-info {
+        width: calc((100% - 24px) / 2);
+        margin: 0 24px 0 0;
+        margin-bottom: 72px;
+    }
+
+    .footer-subscribe {
+        margin: 0;
+    }
+
+    .modal {
+        width: 264px;
+    }
+}
+
+@media (min-width: 768px) and (min-resolution: 2x) {
+    .hero {
+        max-width: 768px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office@2x768px.jpg);
+        background-size: cover;
+    }
+}
+
+@media (min-width: 1158px) {
+    .container {
+        min-width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin: 0 auto;
+    }
+
+    .header-container {
+        justify-content: space-between;
+    }
+
+    .hero {
+        max-width: 1440px;
+        padding-top: 188px;
+        padding-bottom: 188px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office1158px.jpg);
+    }
+
+    .hero-title {
+        font-size: 56px;
+        margin-bottom: 48px;
+    }
+
+    .advantages {
+        padding-bottom: 120px;
+        padding-top: 120px;
+    }
+
+    .advantages-list {
+        gap: 24px;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: stretch;
+    }
+
+    .advantages-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .advantages-icon {
+        display: flex;
+    }
+
+    .portfolio {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
+    .portfolio-item {
+        width: clac((100% - 48px) / 3);
+    }
+
+    .footer {
+        padding-bottom: 100px;
+        padding-top: 100px;
+    }
+
+    .footer-container {
+        text-align: left;
+        width: 1158px;
+        flex-wrap: nowrap;
+    }
+
+    .footer-info {
+        margin: 0 120px 0 0;
+    }
+
+    .footer-social-list {
+        justify-content: start;
+    }
+
+    .footer-subscribe {
+        margin: 0 0 0 65px;
+    }
+
+    .footer-form {
+        gap: 24px;
+        flex-direction: row;
+    }
+
+    .modal {
+        width: 408px;
+    }
+
+    .footer-form-input {
+        opacity: 1;
+    }
+
+    .advantages-subtitle {
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+    .contact-list {
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .contact-link {
+        font-size: 16px;
+    }
+
+    .footer-logo {
+        margin-right: 76px;
+    }
+
+    .portfolio-list {
+        row-gap: 48px;
+    }
+
+    .team {
+        padding-top: 72px;
+        padding-bottom: 72px;
+    }
+}
+
+@media (min-width: 1158px) and (min-resolution: 2x) {
+    .hero {
+        max-width: 1440px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office@2x1158px.jpg);
+        background-size: cover;
+    }
+}
