--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,7 @@ button {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 16px;
+    column-gap: 24px;
     row-gap: 48px;
 }
 
@@ -1168,9 +1168,9 @@ button {
         padding-bottom: 96px;
     }
 
-    /* .portfolio-item {
-        /* width: calc((100% - 72px) / 2);
-    } */
+    .portfolio-item {
+        width: calc((100% - 72px) / 2);
+    }
 
     .portfolio-list {
         justify-content: center;
